# mcp

./: .gitignore  README.md  build_notebook.py  eval_mcp_walkthrough.ipynb  pyproject.toml
eval_mcp/: cli.py  eval_loader.py  evaluator.py  oas_loader.py  report.py  stability.py  stability_cli.py  stability_report.py
evals/: CustomView.json
tests/: test_eval_loader.py  test_evaluator.py  test_oas_loader.py  test_report.py  test_stability.py  test_stability_report.py
