[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-mcp"
version = "0.1.0"
description = "MCP readiness evaluator: tests whether OAS endpoint descriptions enable correct LLM tool selection"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
eval-mcp = "eval_mcp.cli:main"

[tool.setuptools.packages.find]
include = ["eval_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = []
